# adapt

./: .gitignore  AGENTS.md  IMPLEMENTATION_NOTES.md  LICENSE  README.md  diagrams-20251126.md  pyproject.toml  spec.md
.cindex/: db.sqlite
adapt/: __init__.py  __main__.py  admin.py  api_keys.py  app.py  audit.py  auth.py  cache.py  cli.py  config.py  dataset.py  discovery.py  locks.py  models.py  permissions.py  routes.py  security.py  security_urls.py  storage.py  utils.py
blog-posts/: 20251121-excel-plugin-rewrite.md  20251121-intro-to-adapt.md  20251122-code-review-001.md  20251122-companion-file-refactor.md  20251122-hardening-adapt.md  20251122-html-markdown-support.md  20251122-phase1-security-foundation.md  20251122-plugin-route-refactor.md  20251123-code-review-002.md  20251123-code-review-production-hardening.md  20251123-common-navbar-implementation.md  20251123-phase2-authentication-authorization.md  20251123-phase3-advanced-security.md  20251124-admin-ui-polish-and-bug-fixes.md  20251125-html-companions-and-write-removal.md  20251126-cli-admin-improvements.md  20251126-code-review-spec-vs-implementation.md  20251126-dataset-plugin-ui-template-enhancement.md  20251126-landing-page-login-redirect.md  20251126-media-plugin-enhancements.md  20251126-media-plugin-implementation.md  20251126-parquet-plugin-upgrade.md  20251126-plugin-caching-upgrade.md  20251126-sub-namespace-admin-fix.md  20251127-admin-ui-cache-audit-improvements.md  20251127-exponential-backoff-implementation.md  20251128-code-quality-enhancements.md  20251128-config-file-support.md  20251128-logging-configuration-support.md  20251129-extensionless-urls-enhancement.md  20251201-api-keys-and-fixes.md  20251201-markdown-navbar-integration.md  20251204-health-endpoint-implementation.md  20260312-access-control-hardening.md
docs/: MCAF_ADOPTION_PLAN.md
examples/: 01-data.parquet  README.md  data.csv  foo.csv  index.md  products.csv  test.html  test.txt  workbook.xlsx
tests/: conftest.py  test_admin.py  test_auth.py  test_cache.py  test_cli_integration.py  test_config.py  test_constraints.py  test_csv_plugin.py  test_dataset_plugin.py  test_dependencies.py  test_discovery.py  test_html_plugin.py  test_integration.py  test_locks.py  test_on_delete.py  (+7 more)
(+82 files in other folders)
